# json-benchmark

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
binary/: Cargo.toml
binary/src/: main.rs
cpp/: Makefile  bench.cpp  canada.cc  canada.h  main.cc  timer.cc  timer.h  util.cc  util.h
data/: log.json
json.rs/: README.md  package.json  webpack.config.js
json.rs/src/: benches.js  chart.js
src/: adapter.rs  binary.rs  canada.rs  citm_catalog.rs  color.rs  empty.rs  enums.rs  lib.rs  main.rs  prim_str.rs  timer.rs  twitter.rs
src/borrow/: citm_catalog.rs  log.rs  mod.rs  twitter.rs
src/copy/: citm_catalog.rs  log.rs  mod.rs  twitter.rs
