[package]
name = "json-benchmark"
version = "0.0.1"
authors = ["dtolnay@gmail.com"]
edition = "2018"
publish = false

[dependencies]
getopts = "0.2"
jemallocator = "0.3"
json = { version = "0.12", optional = true }
rustc-serialize = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-bench = { version = "0.0.7", optional = true }
serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.1", optional = true}
time = "0.1"

[features]
default = ["performance", "all-libs", "all-files"]
all-libs = ["lib-serde", "lib-json-rust", "lib-rustc-serialize", "lib-simd-json"]
all-files = ["file-canada", "file-citm-catalog", "file-twitter"]
performance = ["parse-dom", "stringify-dom", "parse-struct", "stringify-struct"]
lib-serde = ["serde", "serde_json"]
lib-simd-json = ["serde", "simd-json"]
lib-json-rust = ["json"]
lib-rustc-serialize = ["rustc-serialize"]
file-canada = []
file-citm-catalog = []
file-twitter = []
parse-dom = []
stringify-dom = []
parse-struct = []
stringify-struct = []
zero-copy = []
binary = ["serde-bench", "lib-serde"]

[profile.release]
debug = true
panic = "abort"

[workspace]
members = ["binary"]
