[package]
name = "binary-benchmark"
version = "0.0.1"
authors = ["dtolnay@gmail.com"]
edition = "2018"
publish = false

[dependencies]
json-benchmark = { path = ".." }
serde = "1.0"
serde-bench = "0.0.7"
serde_json = "1.0"
time = "0.1"

[features]
default = ["performance", "all-files"]
all-files = ["file-canada", "file-citm-catalog", "file-twitter"]
performance = ["parse-struct", "stringify-struct"]
file-canada = []
file-citm-catalog = []
file-twitter = []
parse-struct = []
stringify-struct = []
