[package]
name = "binary-benchmark"
version = "0.0.1"
authors = ["dtolnay@gmail.com"]
edition = "2021"
publish = false

[dependencies]
json-benchmark = { path = ".." }
serde-bench = "0.0.11"
serde_json = "1.0"

[features]
default = ["performance", "all-files"]
all-files = ["file-canada", "file-citm-catalog", "file-twitter"]
performance = ["parse-struct", "stringify-struct"]
file-canada = []
file-citm-catalog = []
file-twitter = []
parse-struct = []
stringify-struct = []
